# recreads

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
notebooks/: 20210526_data_download.ipynb  20210526_initial_data_download.ipynb  20210527_initial_eda.ipynb  20210528_temporal_train_dev_test_split.ipynb  20210603_spotlight.ipynb
src/recreads/data/: load.py
