[tool.poetry]
name = "recreads"
version = "0.1.0"
description = ""
authors = ["Alexander Junge <alexander.junge@gmail.com>"]
license = "MIT"
packages = [
    { include = "recreads", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.8.1"
pandas = "^1.2.4"
arrow = "^1.1.0"
pyarrow = "^4.0.1"

[tool.poetry.dev-dependencies]
gdown = "^3.13.0"
jupyterlab = "^3.0.16"
seaborn = "^0.11.1"
altair = "^4.1.0"
lux-api = "^0.3.0"
pre-commit = "^2.13.0"
spotlight = {git = "https://github.com/maciejkula/spotlight.git"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
